changed the approach, to improve user experience
Instead of redirecting the page once it's loaded, the add-on now intercepts the HTTP request before it is sent, changes the requested URL, and then only sends the request to Wikipedia servers. It should make the add-on more agreedable to use, and should ease the load on Wikipedia servers.

--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,23 @@
 {
   "manifest_version": 2,
   "name": "Classic mode for Wikipedia",
-  "version": "1.1",
+  "version": "1.2",
   "browser_specific_settings": {
     "gecko": {
       "strict_min_version": "52.0",      
+            "id": "{231c59cf-2c20-4290-b421-b351d769ff4b}"
     }
   },
   "description": "Get the classic Wikipedia interface back, pre-January 2023.",
   "icons": {
     "48": "back.svg"
   },
-  "content_scripts": [
-    {
-      "matches": [
-        "*://*.wikipedia.org/*"
-      ],
-      "js": [
-        "Classic_mode_Wikipedia.js"
-      ]
-    }
-  ]
+   "permissions": [
+    "webRequest",
+    "webRequestBlocking",
+    "https://*.wikipedia.org/"
+  ],
+  "background": {
+    "scripts": ["background.js"]
+  }
 }
