--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Classic mode for Wikipedia",
-  "version": "1.2",
+  "version": "1.3",
   "browser_specific_settings": {
     "gecko": {
       "strict_min_version": "52.0",      
@@ -15,7 +15,7 @@
    "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "https://*.wikipedia.org/"
+    "*://*.wikipedia.org/*"
   ],
   "background": {
     "scripts": ["background.js"]
