--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,31 @@
 {
   "manifest_version": 2,
   "name": "Classic mode for Wikipedia",
-  "version": "1.3",
+  "version": "1.4",
   "browser_specific_settings": {
     "gecko": {
-      "strict_min_version": "52.0",      
-            "id": "{231c59cf-2c20-4290-b421-b351d769ff4b}"
+      "strict_min_version": "52.0",
+      "id": "{231c59cf-2c20-4290-b421-b351d769ff4b}"
     }
   },
-  "description": "Get the classic Wikipedia interface back, pre-January 2023.",
+  "description": "Get the classic Wikipedia interface back, pre-January 2023. Also works for some other popular Wikimedia projects (Wikicommons, Wiktionary, and more).",
   "icons": {
     "48": "back.svg"
   },
-   "permissions": [
-    "webRequest",
-    "webRequestBlocking",
-    "*://*.wikipedia.org/*"
+  "permissions": [
+  "webRequest",
+  "webRequestBlocking",
+  "*://*.wikipedia.org/*",
+  "*://commons.wikimedia.org/*", 
+  "*://*.wiktionary.org/*",
+  "*://*.wikisource.org/*", 
+  "*://*.wikidata.org/*",
+  "*://*.mediawiki.org/*"
   ],
+
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   }
 }
