--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme 
 title: Classic Mode for Wikipedia
-description: Classic mode for Wikipedia is a Firefox add-on to get the classic Wikipedia interface and layout back, pre-January 2023. It is free, open-source, without advertisement, and respects your privacy.
+description: a Firefox add-on to get the classic Wikipedia interface and layout back.
